--- a/src/main/resources/hospitalx/lingua/i18n/aplicacao.properties
+++ b/src/main/resources/hospitalx/lingua/i18n/aplicacao.properties
@@ -7,3 +7,10 @@ editar=Editar
 eliminar=Eliminar
 listar=Listar
 seleccionar=== Selecciona ==
+confirmacao=Confirma\u00e7\u00e3o
+deseja-eliminar-registo\ =Deseja Eliminar o Registo 
+registo=Registo
+do=Do
+sigla=Sigla
+novo=Novo
+cancelar=Cancelar
