COnstrução da pagina Gestao Funcionario

--- a/src/main/resources/hospitalx/lingua/i18n/aplicacao_en_GB.properties
+++ b/src/main/resources/hospitalx/lingua/i18n/aplicacao_en_GB.properties
@@ -14,3 +14,14 @@ do=Do
 sigla=Sigla
 novo=New
 cancelar=Cancel
+sistema-gestao-hospitalar=Hospital Management System
+titulo-sistema=Hospital X
+area-administrativa=Administrative area
+gestao-funcionarios=Employee Management
+gestao-internamentos=Inpatient management
+gestao-pacientes=Patient Management
+gestao-exames=Exam Management
+gestao-consultas=Consultation management
+procurar=Search for
+camas=Beds
+quartos=Bedrooms
