--- a/src/main/resources/hospitalx/lingua/i18n/aplicacao_es_ES.properties
+++ b/src/main/resources/hospitalx/lingua/i18n/aplicacao_es_ES.properties
@@ -14,3 +14,14 @@ do=Do
 sigla=Sigla
 novo=Nuevo
 cancelar=Cancelar
+sistema-gestao-hospitalar=Sistema de gesti\u00f3n hospitalaria
+titulo-sistema=Hospital X
+area-administrativa=\u00c1rea administrativa
+gestao-funcionarios=Gesti\u00f3n de empleados
+gestao-internamentos=Manejo de pacientes hospitalizados
+gestao-pacientes=El manejo del paciente
+gestao-exames=Gesti\u00f3n de ex\u00e1menes
+gestao-consultas=Gesti\u00f3n de consultas
+procurar=Buscar
+camas=Camas
+quartos=Dormitorios
