--- a/src/main/resources/hospitalx/lingua/i18n/aplicacao_fr_FR.properties
+++ b/src/main/resources/hospitalx/lingua/i18n/aplicacao_fr_FR.properties
@@ -14,3 +14,14 @@ do=Do
 sigla=Sigla
 novo=Nouveau
 cancelar=Annuler
+sistema-gestao-hospitalar=Syst\u00e8me de gestion hospitali\u00e8re
+titulo-sistema=Hospital X
+area-administrativa=Zone administrative
+gestao-funcionarios=Gestion des employ\u00e9s
+gestao-internamentos=Gestion des patients hospitalis\u00e9s
+gestao-pacientes=Gestion des patients
+gestao-exames=Gestion des examens
+gestao-consultas=Gestion des consultations
+procurar=Rechercher
+camas=Des lits
+quartos=Chambres
