--- a/src/main/resources/hospitalx/lingua/i18n/aplicacao_pt_PT.properties
+++ b/src/main/resources/hospitalx/lingua/i18n/aplicacao_pt_PT.properties
@@ -14,3 +14,14 @@ do=Do
 sigla=Sigla
 novo=Novo
 cancelar=Cancelar
+sistema-gestao-hospitalar=Sistema de Gest\u00e3o Hospitalar
+titulo-sistema=Hospital X
+area-administrativa=Area Administrativa
+gestao-funcionarios=Gest\u00e3o de Funcionarios
+gestao-internamentos=Gest\u00e3o de internamentos
+gestao-pacientes=Gest\u00e3o de Pacientes
+gestao-exames=Gest\u00e3o de Exames
+gestao-consultas=Gest\u00e3o de consultas
+procurar=Procurar
+camas=Camas
+quartos=Quartos
