--- a/src/main/resources/hospitalx/lingua/i18n/messagens.properties
+++ b/src/main/resources/hospitalx/lingua/i18n/messagens.properties
@@ -10,6 +10,8 @@ provincia=Provincia
 sexo=Sexo
 novo-funcionario=Novo Funcionario
 gestao-funcionarios=Gest\u00e3o dos Funcionarios
+novo-enfermeiro=Novo Enfermeiro
+gestao-enfermeiros=Gest\u00e3o dos Enfermeiros
 id=ID
 email=Email
 telefone=Telefone:
@@ -19,4 +21,5 @@ bairro=Bairro
 distritito=Distritito
 quarto=Quarto
 funcionario=Funcionario
+enfermeiro=Enfermeiro
 endereco=Endere\u00e7o
