Guardar e Listar Enfermeiro a Funcionar

--- a/src/main/resources/hospitalx/lingua/i18n/aplicacao.properties
+++ b/src/main/resources/hospitalx/lingua/i18n/aplicacao.properties
@@ -5,19 +5,19 @@
 guardar=Guardar
 editar=Editar
 eliminar=Eliminar
-listar=Listar
+listar=Listar 
 seleccionar=== Selecciona ==
 confirmacao=Confirma\u00e7\u00e3o
 deseja-eliminar-registo\ =Deseja Eliminar o Registo 
 registo=Registo
 do=Do
 sigla=Sigla
-novo=Novo
+novo=Novo  
 cancelar=Cancelar
 sistema-gestao-hospitalar=Sistema de Gest\u00e3o Hospitalar
 titulo-sistema=Hospital X
-area-administrativa=Area Administrativa
-gestao-funcionarios=Gest\u00e3o de Funcionarios
+area-administrativa=\u00c1rea Administrativa
+gestao-funcionarios=Gest\u00e3o de Funcion\u00e1rios
 gestao-enfermeiros=Gest\u00e3o de Enfermeiros
 gestao-internamentos=Gest\u00e3o de internamentos
 gestao-pacientes=Gest\u00e3o de Pacientes
