--- a/src/main/resources/hospitalx/lingua/i18n/messagens.properties
+++ b/src/main/resources/hospitalx/lingua/i18n/messagens.properties
@@ -2,25 +2,25 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-nome=Nome:
-sobrenome=Sobrenome:
+nome=Nome
+sobrenome=Sobrenome
 data-nascimento=Data de Nascimento
-municipio=Municipio
-provincia=Provincia
+municipio=Munic\u00edpio
+provincia=Prov\u00edncia
 sexo=Sexo
-novo-funcionario=Novo Funcionario
-gestao-funcionarios=Gest\u00e3o dos Funcionarios
+novo-funcionario=Novo Funcion\u00e1rio
+gestao-funcionarios=Gest\u00e3o dos Funcion\u00e1rios
 novo-enfermeiro=Novo Enfermeiro
 gestao-enfermeiros=Gest\u00e3o dos Enfermeiros
 id=ID
 email=Email
-telefone=Telefone:
+telefone=Telefone
 rua=Rua
 casa=Casa
 bairro=Bairro
-distritito=Distritito
+distritito=Distrito
 quarto=Quarto
-funcionario=Funcionario
+funcionario=Funcion\u00e1rio
 enfermeiro=Enfermeiro
 endereco=Endere\u00e7o
-sigla\ do\ quarto=Sigla do Quarto:
+sigla\ do\ quarto=Sigla do Quarto
