Implementação da página gestão de médicos e seus eventos

--- a/src/main/resources/hospitalx/lingua/i18n/aplicacao.properties
+++ b/src/main/resources/hospitalx/lingua/i18n/aplicacao.properties
@@ -26,3 +26,10 @@ gestao-consultas=Gest\u00e3o de consultas
 procurar=Procurar
 camas=Camas
 quartos=Quartos
+gestao-medicos=Gest\u00e3o de M\u00e9dico
+novo-medico=Novo M\u00e9dico
+internamentos=Internamentos
+lista-medicos=Lista de M\u00e9dicos
+receitas=Receitas
+nome=Nome
+sobrenome=Sobrenome
