--- a/src/main/resources/hospitalx/lingua/i18n/aplicacao_en_GB.properties
+++ b/src/main/resources/hospitalx/lingua/i18n/aplicacao_en_GB.properties
@@ -25,3 +25,10 @@ gestao-consultas=Consultation management
 procurar=Search for
 camas=Beds
 quartos=Bedrooms
+gestao-medicos=Medical Management
+novo-medico=New Doctor 
+internamentos=Hospitalizations
+lista-medicos=List of Doctors
+receitas=Recipes
+nome=Name
+sobrenome=Surname
