--- a/src/main/resources/hospitalx/lingua/i18n/aplicacao_es_ES.properties
+++ b/src/main/resources/hospitalx/lingua/i18n/aplicacao_es_ES.properties
@@ -25,3 +25,10 @@ gestao-consultas=Gesti\u00f3n de consultas
 procurar=Buscar
 camas=Camas
 quartos=Dormitorios
+gestao-medicos=Administraci\u00f3n Medica
+novo-medico=Nuevo Doctor
+internamentos=Hospitalizaciones
+lista-medicos=Lista de Doctores
+receitas=Recetas
+nome=Nombre
+sobrenome=Apellido
