--- a/src/main/resources/hospitalx/lingua/i18n/aplicacao_fr_FR.properties
+++ b/src/main/resources/hospitalx/lingua/i18n/aplicacao_fr_FR.properties
@@ -25,3 +25,10 @@ gestao-consultas=Gestion des consultations
 procurar=Rechercher
 camas=Des lits
 quartos=Chambres
+gestao-medicos=Gestion M\u00e9dicale
+novo-medico=Nouveau Docteur 
+internamentos=Hospitalisations
+lista-medicos=Liste des M\u00e9decins
+receitas=Recettes
+nome=Nom
+sobrenome=Nom de Famille
