--- a/src/main/resources/hospitalx/lingua/i18n/messagens.properties
+++ b/src/main/resources/hospitalx/lingua/i18n/messagens.properties
@@ -24,3 +24,8 @@ funcionario=Funcion\u00e1rio
 enfermeiro=Enfermeiro
 endereco=Endere\u00e7o
 sigla\ do\ quarto=Sigla do Quarto
+gestao-medicos=Gest\u00e3o de M\u00e9dicos
+novo-medico=Novo M\u00e9dico
+internamentos=Internamentos
+lista-medicos=Lista de M\u00e9dicos
+receitas=Receitas
