--- a/src/main/resources/hospitalx/lingua/i18n/messagens_en_GB.properties
+++ b/src/main/resources/hospitalx/lingua/i18n/messagens_en_GB.properties
@@ -2,8 +2,8 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-nome=Nome:
-sobrenome=Sobrenome:
+nome=Name
+sobrenome=Surname
 data-nascimento=Data de Nascimento
 municipio=Municipio
 provincia=Provincia
@@ -21,3 +21,8 @@ quarto=Quarto
 funcionario=Employee
 endereco=Address
 sigla\ do\ quarto=Sigla do Quarto:
+gestao-medicos=Medical Management
+novo-medico=New Doctor
+internamentos=Hospitalizations
+lista-medicos=List of Doctors
+receitas=Recipes
