--- a/src/main/resources/hospitalx/lingua/i18n/messagens_es_ES.properties
+++ b/src/main/resources/hospitalx/lingua/i18n/messagens_es_ES.properties
@@ -2,8 +2,8 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-nome=Nome:
-sobrenome=Sobrenome:
+nome=Nombre
+sobrenome=Apellido
 data-nascimento=Data de Nascimento
 municipio=Municipio
 provincia=Provincia
@@ -21,3 +21,8 @@ quarto=Quarto
 funcionario=Empleado
 endereco=Direcci\u00f3n
 sigla\ do\ quarto=Sigla do Quarto:
+gestao-medicos=Administraci\u00f3n Medica
+novo-medico=Nuevo Doctor
+internamentos=Hospitalizaciones
+lista-medicos=Lista de Doctores
+receitas=Recetas
