--- a/src/main/resources/hospitalx/lingua/i18n/messagens_fr_FR.properties
+++ b/src/main/resources/hospitalx/lingua/i18n/messagens_fr_FR.properties
@@ -2,8 +2,8 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-nome=Nome:
-sobrenome=Sobrenome:
+nome=Nom
+sobrenome=Nom de Famille
 data-nascimento=Data de Nascimento
 municipio=Municipio
 provincia=Provincia
@@ -21,3 +21,8 @@ quarto=Quarto
 funcionario=Employ\u00e9
 endereco=Adresse
 sigla\ do\ quarto=Sigla do Quarto:
+gestao-medicos=Gestion M\u00e9dicale
+novo-medico=Nouveau Docteur
+internamentos=Hospitalisations
+lista-medicos=Liste des M\u00e9decins
+receitas=Recettes
