--- a/src/main/resources/hospitalx/lingua/i18n/messagens_pt_PT.properties
+++ b/src/main/resources/hospitalx/lingua/i18n/messagens_pt_PT.properties
@@ -2,8 +2,8 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-nome=Nome:
-sobrenome=Sobrenome:
+nome=Nome
+sobrenome=Sobrenome
 data-nascimento=Data de Nascimento
 municipio=Municipio
 provincia=Provincia
@@ -21,3 +21,8 @@ quarto=Quarto
 funcionario=Funcionario
 endereco=Endere\u00e7o
 sigla\ do\ quarto=Sigla do Quarto:
+gestao-medicos=Gest\u00e3o de M\u00e9dicos
+novo-medico=Novo M\u00e9dico
+internamentos=Internamentos
+lista-medicos=Lista de M\u00e9dicos
+receitas=Receitas
