--- a/src/main/resources/hospitalx/lingua/i18n/messagens.properties
+++ b/src/main/resources/hospitalx/lingua/i18n/messagens.properties
@@ -22,5 +22,6 @@ distritito=Distrito
 quarto=Quarto
 funcionario=Funcion\u00e1rio
 enfermeiro=Enfermeiro
+enfermeiros=Enfermeiros
 endereco=Endere\u00e7o
 sigla\ do\ quarto=Sigla do Quarto
